test/expected/cast_a3i.out
cast x into array 3 of int
^
1: error: arithmetic or pointer type expected
